# MSE-TM-nRF9160

./: LICENSE  README.md
application/: AWS-ag.py  CMakeLists.txt  Kconfig  README.md  cheater.py  demo.py  prj.conf
application/src/: custom_secure.h  main.c  measures.c  measures.h  secure_services_ns.c
spm_module/zephyr/: CMakeLists.txt
spm_module/zephyr/spm/: CMakeLists.txt  prj.conf
spm_module/zephyr/spm/src/: main.c  secure_services.c  spm_internal.h
